fix: buttons visibility on small screens

--- a/purrgrammer/styles/style.css
+++ b/purrgrammer/styles/style.css
@@ -246,6 +246,12 @@ body {
     justify-content: center;
     flex-direction: column;
   }
+
+  #sound-btn, #reset-btn {
+    z-index: 200;
+  }
+
+
 } 
 
 /* Responsive adjustments for different screen heights */
